Closed Bug 1291163 Opened 8 years ago Closed 8 years ago

Intermittent dom/canvas/test/webgl-mochitest/test_capture.html | application crashed [@ mozilla::layers::PersistentBufferProviderShared::BorrowDrawTarget(mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const &)]

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox50 --- fixed
firefox51 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: nical)

References

Details

(Keywords: intermittent-failure, Whiteboard: [gfx-noted])

Attachments

(1 file)

orangefactor shows 3 instances of this intermittent failure, all of which happening just after a device reset.
This is when trying to get a texture for the canvas to draw into, and we already have buffered 4 textures which are marked as busy (the compositor hasn't released them). In theory we throttle the main thread so that this never happens, but I can imagine that the device reset puts us in buggy situation where we didn't unlock the textures on the compositor side.
Assignee: nobody → nical.bugzilla
Flags: needinfo?(nical.bugzilla)
This should do. If after this the intermittent persists, we can turn the MOZ_ASSERT(false) into a non-fatal gfxCriticalNote, but I'd rather keep crashing debug builds when something like that happens if possible.
Attachment #8777767 - Flags: review?(sotaro.ikeda.g)
Attachment #8777767 - Flags: review?(sotaro.ikeda.g) → review+
Pushed by nsilva@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/9beaa7589405
Make sure TextureHosts are read-unlock'ed if Compositor::EndFrame is not called. r=sotaro
Blocks: 1285271
https://hg.mozilla.org/mozilla-central/rev/9beaa7589405
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Depends on: 1294351
Should we consider landing this on Aurora as well?
Flags: needinfo?(nical.bugzilla)
Comment on attachment 8777767 [details] [diff] [review]
ReadUnlock if we are not going to call EndFrame

Approval Request Comment
[Feature/regressing bug #]:
[User impact if declined]: Some crashes related to device resets.
[Describe test coverage new/current, TreeHerder]: None.
[Risks and why]: low risk, this patch is simple and assumes the worst cases so it tends to be more robust than before patch.
[String/UUID change made/needed]: None.
Flags: needinfo?(nical.bugzilla)
Attachment #8777767 - Flags: approval-mozilla-aurora?
Comment on attachment 8777767 [details] [diff] [review]
ReadUnlock if we are not going to call EndFrame

Fixes an intermittent failure, Aurora50+
Attachment #8777767 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: