Bug 1291163 - Make sure TextureHosts are read-unlock'ed if Compositor::EndFrame is not called. r=sotaro